# certora_task

./: .gitignore  README.md  check.sh  demo_example_requests.sh  demo_setup.sh  docker-compose.yaml  dockerfile  pyproject.toml
.github/workflows/: Check.yml
src/: app_server.py  city_details_proccesing.py  configuration.py  mocked_moto.py  ref_server.py  ref_server_communication.py  s3_communication.py
test/: conftest.py  test_app_server.py  test_city_details_proccesing.py  test_s3_communication.py
